CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(InputLibrary)

SET(CMAKE_CXX_STANDARD 17)

SET(SOURCE_FILES
	Input.cpp
	Input.h)

ADD_LIBRARY(InputLibrary SHARED ${SOURCE_FILES})

IF (NOT TARGET StreamStringLibrary)
	ADD_SUBDIRECTORY(StreamStringLibrary)
ENDIF ()

TARGET_LINK_LIBRARIES(InputLibrary StreamStringLibrary)
